K8S/simplecrud-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: simplecrudnpservice-srv
spec:
  type: NodePort
  selector:
    app: simplecrud
  ports:
    - name: simplecrud
      protocol: TCP
      port: 80
      targetPort: 80
